# corm

./: .flake8  .gitignore  .pre-commit-config.yaml  .style.yapf  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: python-package.yml
benchmarks/: index.html
corm/: __init__.py  constants.py  entity.py  fields.py  hooks.py  model.py  registry.py  storage.py
docs/: faq.md  index.md  to-be-done.md  usage.md
docs/examples/: entity_default_callable_inplace.py  entity_fields.py  key_relationships_bidirectional.py  key_relationships_change.py  key_relationships_simple.py  relationships_bidirectional.py  relationships_change.py  relationships_change_many.py  relationships_self_nested.py  relationships_simple.py  relationshps_manually_related.py
docs/usage/: entity.md  hooks.md  key-relationships.md  relationships.md
examples/: entity_default_callable_inplace.py  entity_default_values.py  entity_fields.py  key_relationships_bidirectional.py  key_relationships_change.py  relationships_bidirectional.py  relationships_simple.py
faq/: index.html
search/: search_index.json
tests/: conftest.py  test_entity.py  test_key_nested.py  test_key_relationship.py  test_model.py  test_nested.py  test_relationship.py  test_storage.py
to-be-done/: index.html
usage/: index.html
usage/entity/: index.html
usage/hooks/: index.html
usage/key-relationships/: index.html
usage/relationships/: index.html
usage/storage/: index.html
