[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "corm"
version = "0.0.3"
description = "Relationships between data structures"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
authors = [
    {name = "angru", email = "angru@list.ru"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]

[tool.setuptools]
packages = ["corm"]

[dependency-groups]
dev = [
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]
lint = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]
